[package]
name = "llm-bot"
version = "0.1.0"
authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "rustls"] }
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs", features = [
    "stream",
] }

tokio = { version = "1.8", features = ["full"] }
futures = "0.3"

log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
